# DL_tts_project

./: .gitignore  README.md  calc_metric.py  demo_colab.ipynb  inference.py  pyproject.toml  requirements.txt  requirements_all.txt  requirements_colab.txt  synthesize.py  train.py
scripts/: download_generator.py  extract_generator.py  visualize_batch.py
src/configs/: inference.yaml  synthesize.yaml  train.yaml
src/configs/datasets/: custom_dir.yaml  librispeech.yaml
src/configs/experiment/: baseline_onebatch.yaml  deepspeech_librispeech.yaml  hifigan_onebatch.yaml  hifigan_small.yaml
src/configs/lr_scheduler/: one_cycle.yaml  plateau.yaml
src/configs/metrics/: asr_argmax.yaml  asr_beam.yaml
src/configs/model/: deepspeech.yaml
src/configs/transforms/: no_augs.yaml  train.yaml
src/configs/transforms/batch/: spec_augs.yaml
src/configs/transforms/instance/: inference.yaml  train.yaml
src/datasets/: __init__.py  base_dataset.py  collate.py  common_voice.py  custom_dir_dataset.py  data_utils.py  librispeech_dataset.py  ruslan_dataset.py
src/logger/: __init__.py  cometml.py  utils.py  wandb.py
src/loss/: __init__.py  gan_loss.py
src/metrics/: __init__.py  base_metric.py  cer.py  tracker.py  utils.py  wer.py
src/model/: __init__.py  acoustic_model.py  baseline_model.py  deepspeech.py  hifigan.py
src/text_encoder/: __init__.py  ctc_text_encoder.py
src/trainer/: __init__.py  base_trainer.py  gan_trainer.py  inferencer.py  trainer.py
src/transforms/: __init__.py  log.py  mel_spectrogram.py  normalize.py
src/transforms/spec_augs/: __init__.py  masking.py
src/transforms/wav_augs/: __init__.py  colored_noise.py  gain.py  pitch_shift.py
src/utils/: audio.py  device.py  init_utils.py  io_utils.py  timing.py
