[project]
name = "dl-sound-project"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "black>=25.12.0",
    "comet-ml>=3.55.0",
    "datasets>=4.4.2",
    "editdistance>=0.8.1",
    "hydra-core>=1.3.2",
    "ipykernel>=7.1.0",
    "isort>=7.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pre-commit>=4.5.1",
    "soundfile>=0.13.1",
    "torch>=2.7.1",
    "torch-audiomentations>=0.12.0",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "wandb>=0.23.1",
    "wget>=3.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128" },
]
torchvision = [
  { index = "pytorch-cu128" },
]
torchaudio = [
  { index = "pytorch-cu128" },
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
