[project]
name = "dl-tts-project"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "gdown>=5.2.1",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "omegaconf>=2.3.0",
    "pandas>=3.0.0",
    "pillow>=12.1.0",
    "soundfile>=0.13.1",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128" },
]
torchvision = [
  { index = "pytorch-cu128" },
]
torchaudio = [
  { index = "pytorch-cu128" },
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "deptry>=0.24.0",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
    "wandb>=0.24.2",
]
local = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
]
torch = [
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
]
train = [
    "pillow>=12.1.0",
    "wandb>=0.24.2",
]
